# imc-prosperity-4-backtester

./: .gitignore  README.md  backtester.drawio  datamodel.py  file_creator.py  pyproject.toml
prosperity4bt/: __main__.py  back_tester.py  constants.py  test_runner.py
prosperity4bt/models/: input.py  output.py  test_options.py
prosperity4bt/resources/round0/: _products.txt
prosperity4bt/resources/round0/EMERALDS/: prices_round_0_day_-1_EMERALDS.parquet  prices_round_0_day_-2_EMERALDS.parquet  trades_round_0_day_-1_EMERALDS.parquet  trades_round_0_day_-2_EMERALDS.parquet
prosperity4bt/resources/round0/TOMATOES/: prices_round_0_day_-1_TOMATOES.parquet  prices_round_0_day_-2_TOMATOES.parquet  (+2 more)
prosperity4bt/resources/round12/: _products.txt
prosperity4bt/resources/round3/: _products.txt
prosperity4bt/tools/: convert_resources_to_parquet.py  data_reader.py  log_creator.py  order_match_maker.py  output_file_writer.py  result_merger.py  summary_printer.py  visualizer.py
src/: __main__.py  back_tester.py  constants.py  data_reader.py  log_creator.py  order_match_maker.py  output_file_writer.py  result_merger.py  round_day_option.py  summary_printer.py  test_options.py  test_runner.py
src/models/: acttivty_row.py  back_test_data.py  backtest_result.py  market_trade.py  observation_row.py  price_row.py  sandbox_log_row.py  trade_matching_mode.py  trader_row.py
src/resources/round1/: prices_round_1_day_-3.csv  trades_round_1_day_-3.csv
tests/: test_order_match_maker.py  test_parquet_data_reader.py  test_result_merger.py  test_run_mode.py  test_test_runner.py
(+185 files in other folders)
