[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prosperity4bt"
version = "0.0.1"
description = "Backtester for IMC Prosperity 4 algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.18.1",
    "jsonpickle>=4.0.2",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.scripts]
prosperity4bt = "prosperity4bt.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["prosperity4bt*"]

[tool.setuptools.package-data]
prosperity4bt = ["resources/**/*.csv"]